--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
+    "@mui/joy": "^5.0.0-alpha.66",
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
