--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "tss-react": "^4.6.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
