--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "eslint-config-next": "13.1.6",
     "material": "^0.5.2",
     "next": "13.1.6",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-player": "^2.11.2",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "tss-react": "^4.6.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "sass": "^1.58.0"
