--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "flat-carousel": "^0.0.1",
     "material": "^0.5.2",
     "next": "13.1.6",
     "react": "^18.2.0",
