--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "next": "13.1.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.11.2",
     "react-slick": "^0.29.0",
